fixing alignment

--- a/styles.css
+++ b/styles.css
@@ -313,8 +313,6 @@ body {
     padding: 50px;
     background-color: rgb(227, 227, 227);
     display: flex;
-    justify-content: left; /* Center the grid horizontally */
-    gap: 100px;
 }
 
 .skill-section ::after{
@@ -325,6 +323,12 @@ body {
     right: 150px; /* Adjust as needed to add padding on the right */
     height: 2px; /* The thickness of the border */
     background-color: #555; /* The color of the border */
+}
+
+.skills-container{
+    display: flex;
+    justify-content: left; /* Center the grid horizontally */
+    gap: 100px;
 }
 
 .skills-title h2 {
